--- a/js/data/locale/unitfmt.json
+++ b/js/data/locale/unitfmt.json
@@ -462,12 +462,26 @@
         "electricalEnergy": {
             "description": "amount of energy in electricity",
             "type": "energy",
-            "units": [
-                "watt-hour",
-                "kilowatt-hour",
-                "megawatt-hour",
-                "gigawatt-hour"
-            ]
+            "units": {
+                "metric": [
+                    "watt-hour",
+                    "kilowatt-hour",
+                    "megawatt-hour",
+                    "gigawatt-hour"
+                ],
+                "uscustomary": [
+                    "watt-hour",
+                    "kilowatt-hour",
+                    "megawatt-hour",
+                    "gigawatt-hour"
+                ],
+                "imperial": [
+                    "watt-hour",
+                    "kilowatt-hour",
+                    "megawatt-hour",
+                    "gigawatt-hour"
+                ]
+            }
         },
         "heatingEnergy": {
             "description": "amount of energy required to heat things such as water or home interiors",
