Fix more unit tests. More left to go.

--- a/js/data/locale/unitfmt.json
+++ b/js/data/locale/unitfmt.json
@@ -546,24 +546,11 @@
         "personHeight": {
             "description": "height of an adult or child (not a baby)",
             "type": "length",
-            "units": {
-                "metric": [
-                    "meter"
-                ],
-                "uscustomary": [
-                    "inch",
-                    "foot"
-                ],
-                "imperial": [
-                    "inch",
-                    "foot"
-                ]
-            },
             "systems": {
                 "metric": {
                     "units": [
-                        "meter",
-                        "centimeter"
+                        "centimeter",
+                        "meter"
                     ],
                     "maxFractionDigits": 2,
                     "style": "numeric"
