few locale data update sync up with cldr33

--- a/js/data/locale/ar/sysres.json
+++ b/js/data/locale/ar/sysres.json
@@ -49,27 +49,27 @@
     "N12": "د",
     "EEEE0": "الأحد",
     "EEE0": "الأحد",
-    "EE0": "الأحد",
+    "EE0": "ﺄﺣﺩ",
     "E0": "ح",
     "EEEE1": "الاثنين",
     "EEE1": "الاثنين",
-    "EE1": "الاثنين",
+    "EE1": "ﺎﺜﻨﻴﻧ",
     "E1": "ن",
     "EEEE2": "الثلاثاء",
     "EEE2": "الثلاثاء",
-    "EE2": "الثلاثاء",
+    "EE2": "ﺙﻼﺛﺍﺀ",
     "E2": "ث",
     "EEEE3": "الأربعاء",
     "EEE3": "الأربعاء",
-    "EE3": "الأربعاء",
+    "EE3": "ﺃﺮﺒﻋﺍﺀ",
     "E3": "ر",
     "EEEE4": "الخميس",
     "EEE4": "الخميس",
-    "EE4": "الخميس",
+    "EE4": "ﺦﻤﻴﺳ",
     "E4": "خ",
     "EEEE5": "الجمعة",
     "EEE5": "الجمعة",
-    "EE5": "الجمعة",
+    "EE5": "ﺞﻤﻋﺓ",
     "E5": "ج",
     "EEEE6": "السبت",
     "EEE6": "السبت",
