--- a/js/data/locale/ku/sysres.json
+++ b/js/data/locale/ku/sysres.json
@@ -166,8 +166,8 @@
     "1#1 dy|#{num} dys": "#{num} رۆ",
     "durationLongDays": "#{num} رۆژ",
     "1#1 day|#{num} days": "#{num} رۆژ",
-    "#{num}w": "#{num}ه",
-    "durationMediumWeeks": "#{num} هە",
+    "#{num}w": "#{num}ﻪـ",
+    "durationMediumWeeks": "#{num} ﻪـ",
     "1#1 wk|#{num} wks": "#{num} هەفتە",
     "1#1 week|#{num} weeks": "#{num} هەفتە",
     "durationShortMonths": "#{num}م",
