--- a/js/data/locale/fr/CA/sysres.json
+++ b/js/data/locale/fr/CA/sysres.json
@@ -93,7 +93,7 @@
     "1#1 hr|#{num} hrs": "one#{num} h|#{num} h",
     "durationLongDays": "one#{num} j|#{num} j",
     "1#1 wk|#{num} wks": "one#{num} sem.|#{num} sem.",
-    "1#1 mon|#{num} mons": "one#{num} m|#{num} m",
+    "1#1 mon|#{num} mons": "one#{num} m.|#{num} m.",
     "1#1 yr|#{num} yrs": "one#{num} an|#{num} ans",
     "durationShortMillis": "one#{num}ms|#{num}ms",
     "#{num}s": "one#{num}s|#{num}s",
