Fix IQD currency symbol corresponding cldr 33

--- a/js/data/locale/currency.json
+++ b/js/data/locale/currency.json
@@ -347,7 +347,7 @@
     "IQD": {
         "name": "Iraqi Dinar",
         "decimals": 0,
-        "sign": "ع.د"
+        "sign": "ﺩ.ﻉ."
     },
     "IRR": {
         "name": "Iranian Rial",
